--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <ul>
                             <li><a href="">HOME</a></li>
                             <li><a href="">ABOUT</a></li>
+                            <li><a href="">SKILLS</a></li>
                             <li><a href="">PROJECTS</a></li>
                             <li><a href="">SOCIALS</a></li>
                         </ul>
