--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="second-face">
         <div class="about-title"><h1 class="about-title-h">ABOUT</h1></div>
         <br>
-        <div class="sticky-wrapper">
+          <div class="sticky-wrapper">
             <div class="element-wrapper">
               <div class="element"><p class="first-about">I was born in Pune, India</p></div>
               <div class="element2"><p class="first-about">I Moved from city to city in india </p></div>
@@ -73,12 +73,14 @@
         document.querySelector(".second-face").style.height = horLength + "px";
 
 
-        window.onscroll = function(){
-        var scrollTop = window.pageYOffset;
-        
-        if (scrollTop >= distFromTop && scrollTop <= scrollDistance) {
-            document.querySelector(".element-wrapper").style.transform = "translateX(-"+(scrollTop - distFromTop)+"px)";
-        }
+        window.onscroll = function()
+        {
+            var scrollTop = window.pageYOffset;
+            
+            if (scrollTop >= distFromTop && scrollTop <= scrollDistance) 
+            {
+                document.querySelector(".element-wrapper").style.transform = "translateX(-"+(scrollTop - distFromTop)+"px)";
+            }
         }
     </script>
     <script>
