anchor to about in nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="navigation-menu">
                         <ul>
                             <li><a href="">HOME</a></li>
-                            <li><a href="">ABOUT</a></li>
+                            <li><a href="#about-title-anchor">ABOUT</a></li>
                             <li><a href="">SKILLS</a></li>
                             <li><a href="">PROJECTS</a></li>
                             <li><a href="">SOCIALS</a></li>
@@ -38,7 +38,7 @@
     </section>
 
     <section class="second-face">
-        <div class="about-title"><h1 class="about-title-h">ABOUT</h1></div>
+        <div class="about-title"><h1 class="about-title-h" id="about-title-anchor">ABOUT</h1></div>
         <br>
           <div class="sticky-wrapper">
             <div class="element-wrapper">
