under dev comment

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <section class="third-face">
-        
+        <h3 style="color: white; font-size: 50px;">WEBSITE UNDER DEVELOPMENT</h3>
     </section>
 
     <script>
