--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
         <br>
           <div class="sticky-wrapper">
             <div class="element-wrapper">
-              <div class="element3"><p>I was born in Pune, India</p></div>
-              <div class="element3" id="india"><p>I Moved from city to city in india </p></div>
-              <div class="element3"><p>I came back to Pune in 10th Grade</p></div>
-              <div class="element3"><p>I completed my Secondary school and highschool from MIT-Vishwashanti gurukul pune</p></div>
-              <div class="element3"><p>I decided to persue my passion, and stude Computing Science </p></div>
-              <div class="element3"><p>I got Aceepted in Simon Fraser University Canada</p></div>
-              <div class="element3"><p>I Moved to Canada In 2021, July</p></div>
-              <div class="element3"><p>I am currently Living in Burnaby, Canada</p></div>
-            </div>
+                <div class="element3"><p class="first-about">I was born in Pune, India</p></div>
+                <div class="element3" id="india"><p class="first-about">I Moved from city to city in india </p></div>
+                <div class="element3"><p class="first-about">I came back to Pune in 10th Grade</p></div>
+                <div class="element3"><p class="first-about">I completed my Secondary school and highschool from MIT-Vishwashanti gurukul pune</p></div>
+                <div class="element3"><p class="first-about">I decided to persue my passion, and stude Computing Science </p></div>
+                <div class="element3"><p class="first-about">I got Aceepted in Simon Fraser University Canada</p></div>
+                <div class="element3"><p class="first-about">I Moved to Canada In 2021, July</p></div>
+                <div class="element3"><p class="first-about">I am currently Living in Burnaby, Canada</p></div>
           </div>
     </section>
 
