--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <section class="hero">
                     <h1>HI, <br>  it's Vedant</h1>
-                    <span style="color: white;">I'm a Computing Science student at <a href="https://www.sfu.ca/" class="sfu-link">Simon Fraser University</a></spans>
+                    <span style="color: white;">I'm a Computing Science student at bla <a href="https://www.sfu.ca/" class="sfu-link">Simon Fraser University</a></spans>
                 </section>
                 <section class="second-face">
                     <img class="paper-plane" src="./paper.png" alt="paper-plane">
