--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
     </section>
     <section class="second-face">
+        <h1 class="about">ABOUT</h1>
         <img class="paper-plane" src="./paper.png" alt="paper-plane">
         
     </section>
