--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <section class="second-face">
         <h1 class="about">ABOUT</h1>
         <img class="paper-plane" src="./paper.png" alt="paper-plane">
+        <div id="images-about"><h1 class="aab">THIS IS THE DIV BOX</h1></div>
         
     </section>
 
