--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="navigation-menu">
                         <ul>
                             <li><a href="">HOME</a></li>
-                            <li><a href="#about-title-anchor">ABOUT</a></li>
+                            <li><a href="about.html">ABOUT</a></li>
                             <li><a href="">SKILLS</a></li>
                             <li><a href="">PROJECTS</a></li>
                             <li><a href="">SOCIALS</a></li>
