--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
     const path3Length = path3.getTotalLength()
     const path4Length = path4.getTotalLength()
     path1.style.strokeDasharray  = path1Length
-    path1.style.strokeDashoffset = calcDashoffset(window.innerHeight * 0.8, content1, path1Length)
+    path1.style.strokeDashoffset = path1Length
     
     path2.style.strokeDasharray  = path2Length
     path2.style.strokeDashoffset = path2Length
